--- a/birdstyles.css
+++ b/birdstyles.css
@@ -16,3 +16,8 @@ article.tweet{
     border: 4px solid #c0deed;
     border-radius: 16px;
 }
+img.profile{
+    width:50px;
+    height: 50px;
+    float: left;
+}
